ipc/ipdl/test/ipdl/error/PIntrPriority.ipdl
//error: intr message `Msg' cannot specify [Priority]

[ChildProc=any]
intr protocol PIntrPriority {
child:
  [Priority=vsync, LegacyIntr] intr Msg();
};
